--- a/main.css
+++ b/main.css
@@ -1,23 +1,21 @@
 
-body{
+*{
     margin: 0;
     padding: 0;
 }
-.container{
-    font-size: 30px;
-
-}
 
 table{
-    width: 60%;
+    width: 50%;
     align-items: center;
-    border: 2px solid ;
     margin: auto;
     margin-top: 50px;
 }
+th{
+    border: 2px solid black;
+}
 tr{
-    border: 1px solid black;
+    border: 2px solid black;
 }
 td{
-    border: 1px solid black;
+    border: 2px solid black;
 }
